[gd_scene load_steps=8 format=3 uid="uid://byw1a5vg1eslf"]

[ext_resource type="Script" path="res://src/environment/sapling.gd" id="1_ujq8c"]
[ext_resource type="PackedScene" uid="uid://i58uq73wyw2g" path="res://src/option_aware_audio_player.tscn" id="6_ab0j1"]
[ext_resource type="AudioStream" uid="uid://bg3g4wi7ovphu" path="res://assets/Sounds/rustle.wav" id="7_bdhny"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pnuq"]
size = Vector2(40, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_liqw1"]
size = Vector2(13, 2)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c5816"]
radius = 6.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_48v45"]
radius = 3.0

[node name="Sapling" type="Area2D"]
script = ExtResource("1_ujq8c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -31)
shape = SubResource("RectangleShape2D_3pnuq")

[node name="PerchZone" type="Area2D" parent="."]
position = Vector2(18, -22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerchZone"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_liqw1")

[node name="TopRustleZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRustleZone"]
position = Vector2(-2, -41)
shape = SubResource("CapsuleShape2D_c5816")

[node name="BottomRustleZone" type="Area2D" parent="."]
position = Vector2(25, 22)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRustleZone"]
position = Vector2(-2, -41)
shape = SubResource("CircleShape2D_48v45")

[node name="OptionAwareAudioPlayer" parent="." instance=ExtResource("6_ab0j1")]
stream = ExtResource("7_bdhny")
max_polyphony = 2
